fix: 75ch per line for better readability

--- a/root.css
+++ b/root.css
@@ -81,7 +81,9 @@ p {
 
 .wrapper {
   max-width: 60rem;
+  max-width: 75ch;
   margin-inline: auto;
+  padding-inline: 2rem;
 }
 
 .table .row {
