--- a/src/layout/Header/Header.module.css
+++ b/src/layout/Header/Header.module.css
@@ -1,5 +1,6 @@
 .header {
-  min-height: 26rem;
+  min-height: 20rem;
+  margin-bottom: 1rem;
   background-image: linear-gradient(180deg, var(--clr-accent-100-100) 90.27%, var(--clr-accent-100-0) 100%)
 }
 
@@ -44,7 +45,7 @@
 
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
+  transform: translateY(-100%);
   padding-block: 1.2rem;
   padding-inline: 0.5rem;
   margin-inline: var(--margin-inline);
@@ -65,5 +66,5 @@
   position: absolute;
   bottom: 0px;
   left: 50%;
-  transform: translate(-50%, 70%);
+  transform: translate(-50%, 90%);
 }
